# live-stt

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  LICENSE  PRODUCT.md  README.md  SECURITY.md  TODO.md  bertytype-setup.spec  bertytype.spec  livesttt.spec  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: ui-showcase.html
docs/superpowers/plans/: 2026-05-05-project-scaffold.md  2026-05-05-todo-completion.md  2026-05-06-critical-bugs.md  2026-05-11-bugs-polish-features.md
docs/superpowers/specs/: 2026-05-05-project-structure-design.md  2026-05-06-critical-bugs-design.md
scripts/: make_ico.py  setup_ollama.py
src/bertytype/: __main__.py  config.py  logging.py
src/bertytype/audio/: capture.py  reader.py  vad.py
src/bertytype/injection/: injector.py
src/bertytype/llm/: client.py  prompts.py
src/bertytype/stt/: engine.py  vibevoice.py  vibevoice_local.py
src/bertytype/ui/: settings.py  tokens.py  tray.py
src/bertytype_setup/: __main__.py  checks.py  installers.py  wizard.py
src/livesttt/: __main__.py  config.py  logging.py  messages.py
src/livesttt/audio/: reader.py
src/livesttt/hotkeys/: daemon.py
src/livesttt/injection/: exporter.py  injector.py
src/livesttt/llm/: client.py
src/livesttt/stt/: engine.py  vibevoice.py  vibevoice_local.py
src/livesttt/ui/: settings.py  tray.py
tests/: conftest.py  test_audio.py  test_cancel.py  test_capture_and_process.py  test_config.py  test_hotkeys.py  test_injection.py  test_llm.py  test_logging.py  test_main_shutdown.py  test_settings.py  test_setup_checks.py  test_setup_installers.py  test_setup_wizard.py  test_stt.py  test_tokens.py  test_tray.py  test_vibevoice.py  test_vibevoice_local.py
