[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bertytype"
version = "0.1.2"
description = "Local voice dictation powered by VibeVoice and Gemma 4"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "sounddevice>=0.4,<1",
    "numpy>=1.24,<3",
    "pydub>=0.25,<1",
    "PySide6>=6.7,<7",
    "keyboard>=0.13,<1",
    "pywin32>=306,<400",
    "pyperclip>=1.8,<2",
    "pyautogui>=0.9,<1",
    "requests>=2.31,<3",
    "loguru>=0.7,<1",
    "imageio-ffmpeg>=0.4,<1",
    "huggingface_hub>=0.20,<2",
]

[project.optional-dependencies]
local-stt = [
    "transformers>=4.50,<5",
    "torch>=2.0,<3",
]
dev = [
    "pytest>=7,<9",
    "pytest-mock>=3,<4",
    "pytest-qt>=4.0,<5",
    "mypy>=1.0,<2",
    "Pillow>=10.0,<12",
]

[project.gui-scripts]
bertytype = "bertytype.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bertytype"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
files = ["src/bertytype"]
